<resources>
    <string name="app_name">SmartGenda</string>
    <string name="add">+</string>
    <string name="remove">x</string>
    <string name="update">edit</string>

    <!-- Strings de l'activité Calendar -->
    <string name="calendar_title_activity_calendar">Calendrier</string>
    <string name="calendar_add_event_image_desc">add event button</string>
    <string name="calendar_next_event_title">Prochain évènement</string>
    <string name="calendar_next_event_no_event">Aucun évènement de prévu…</string>
    <string name="calendar_day_monday">LUN</string>
    <string name="calendar_day_tuesday">MAR</string>
    <string name="calendar_day_wenesday">MER</string>
    <string name="calendar_day_thursday">JEU</string>
    <string name="calendar_day_friday">VEN</string>
    <string name="calendar_day_saturday">SAM</string>
    <string name="calendar_day_sunday">DIM</string>

    <!-- Strings de l'activité Event -->
    <string name="event_title_activity">Evénement</string>
    <string name="desc_event_textview">Déscription de l\'événement : </string>
    <string name="date_event_textview">Date : </string>
    <string name="date_picker_textview">date...</string>
    <string name="lieu_event_textview">Lieu de l\'événement</string>
    <string name="carte_button">Carte</string>
    <string name="title_activity_maps">Map</string>
    <string name="event_name_placholder">Entrez le nom...</string>
    <string name="event_location_text_view">Votre destination...</string>
    <string name="event_houre_text_view">L\'heure : </string>
    <string name="event_houre_picker_text_view">heure..</string>
    <string name="event_notification_text_view">Notification :</string>
    <string name="event_weather_text_view">Météo : </string>
    <string name="event_weatherpicked_text_view">météo...</string>

    <!-- Strings de l'activité Map -->
    <string name="maps_destination_text_view">Destination:</string>
    <string name="maps_origin_text_view">Départ:</string>
    <string name="maps_chercher_bouton">Chercher</string>
    <string name="maps_saveLocation_edittext">Sauvegarder</string>

    <!-- String Notification -->
    <string name="notif_title_activity">Notification</string>
    <string name="Notification_name_textview">Nom de la notification</string>
    <string name="Enter_nom_editText">Enter le nom</string>
    <string name="code_couleur_textView"> Couleur </string>
    <string name="sonnerie_textView">Sonnerie</string>
    <string name="rechercher_button">Rechercher</string>
    <string name="rappel_textView">Rappels</string>
    <string name="nouveau_rappel_textView">Nouveau Rappel</string>
    <string name="add_button">+</string>
    <string name="date_textView">Date</string>
    <string name="votre_date_textView">Votre date</string>
    <string name="heure_textView">Rappel avant : </string>
    <string name="heure_editText" />
    <string name="enregistrer_button">Enregistrer</string>
    <string name="event_email_text_view">Email :</string>
    <string name="calendar_trajet_buton">Trajet</string>

    <!-- Spinner Color -->
    <string-array name="array_name">
        <item >Bleu</item>
        <item>Rouge</item>
        <item>Vert</item>
        <item>Orange</item>
        <item>Violet</item>
    </string-array>

    <!-- Spinner Rappel -->
    <string-array name="array_rappel">
        <item >30 min</item>
        <item>Une heure</item>
        <item>3 heures</item>
        <item>6 heures</item>
        <item>12 heures</item>
        <item>24 heures</item>
    </string-array>

</resources>
