<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/maps_destination_layout_id"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/maps_destination_text_view"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/maps_destination_edittext_id"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/maps_control_panel_layout_id"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <Button
            android:onClick="onSearch"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/maps_chercher_bouton"
            android:id="@+id/maps_chercherLieu_bouton_id"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:background="#29bac4"/>


    </LinearLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="0dp" android:layout_weight="0.8"
    tools:context="com.agenda.ter.smartgenda.MapsActivity" />

    <Button
        android:onClick="saveLocation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/maps_saveLocation_edittext"
        android:id="@+id/maps_saveLocation_bouton_id"
        android:background="#b0c429" />

</LinearLayout>